---------------------------------------------------------------------------------------------------
Version: 0.4.2
Date: 03. 10. 2022
  Changes:
    - Improve teleport_safe code to rather use function provided by Factorio.
  Bugfixes:
    - Fix permission management which is the more likely cause of the desync.
---------------------------------------------------------------------------------------------------
Version: 0.4.1
Date: 02. 10. 2022
  Bugfixes:
    - Fix likely desync that could occur in on_tick handler.
---------------------------------------------------------------------------------------------------
Version: 0.4.0
Date: 02. 10. 2022
  Features:
    - Added big countdown letters.
    - Verify world has an valid arena to prevent this mod accidentally staying active after done playing.
    - Added Tips-and-Tricks to show tanks drive through anything.
    - Add custom thanks message when server is hosted by RedMew. (Thanks RedMew!)
  Changes:
    - All arenas are now covered by radar.
    - Slightly changed splash.
  Bugfixes:
    - Admin players now also have full permissions.
---------------------------------------------------------------------------------------------------
Version: 0.3.2
Date: 28. 05. 2022
  Features:
    - Show messages whe player loses or wins to other players in same lobby.
  Changes:
    - Removed hacky workaround after fix in basegame (100508).
  Bugfixes:
    - Rework mechanism not detecting player losing anymore due to wont-fix vanilla regression (102511).
    - Fix crash when player joins lobby during active game.
    - Fix possible crash in collision when player character is killed. Character is now invincible!
    - Fix one player getting points accidentally when nobody won the round.
---------------------------------------------------------------------------------------------------
Version: 0.3.1
Date: 04. 11. 2021
  Changes:
    - While playing on your own you'll now get points based on time (not transfered to lobby)